trail enabled